add_subdirectory(DataProcessing)
add_subdirectory(ServerConnection)
add_subdirectory(Study)
add_subdirectory(Correlate)
add_subdirectory(Filter)
add_subdirectory(App)
add_subdirectory(GUI)

add_library(src INTERFACE)
target_link_libraries(src INTERFACE DataProcessing ServerConnection Study Correlate Filter App GUI)
target_include_directories(src INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
